--- a/secundaria/style.css
+++ b/secundaria/style.css
@@ -6,6 +6,20 @@
     font-family: 'Flatory Sans';
     src: url(../fontes/flatory-sans-bold-condensed.ttf) format(truetype);
 }
+@media only screen and (min-width: 300px){
+    #button{
+        margin-bottom: 20px;
+    }
+    #image img{
+        max-width: 100%;
+        height: auto;
+    }
+}
+@media only screen and (min-width: 801px){
+    body{
+        height: 100vh;
+    }
+}
 :root{
     --main-font: 'Flatory', sans-serif;
     --secondary-font: "Impact", sans-serif;
@@ -19,6 +33,10 @@
 body{
     background-color: var(--background-color);
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
 }
 #error{
     font-family: var(--main-font);
@@ -32,6 +50,7 @@ body{
     font-size: 30.3px;
     margin-top: 5px;
 }
+
 #loading-gif{
     width: 700px;
     margin-top: 16px;
