--- a/principal/style.css
+++ b/principal/style.css
@@ -38,7 +38,9 @@
     #primary-content{
         padding: 7px;
     }
-    #footer{
+    main{
+        box-shadow: 5px 3px 8px 5px #11468c7e;
+        margin: 0 auto;
         padding: 8px;
     }
     #main-title{
@@ -78,6 +80,9 @@
     #list-text{
         margin-bottom: 8px;
     }
+    #footer{
+        padding: 8px;
+    }
 }
 /*pc*/
 @media only screen and (min-width: 801px) {
@@ -86,7 +91,7 @@
         padding-top: 15px;
     }
     #header-text{
-        font-size: 11.9px;
+        font-size: 13.9px;
     }
     #header-list{
         font-size: 15px;
@@ -102,6 +107,12 @@
     }
     #footer{
         padding: 12px;
+    }
+    main{
+        border-radius: 10px;
+        box-shadow: 5px 3px 8px 5px #11468c7e;
+        margin: 0 auto;
+        padding: 8px;
     }
     #main-title{
         font-size: 33px;
@@ -175,9 +186,12 @@ main{
     min-width: 300px;
     max-width: 800px;
     font-family: var(--main-font);
+    background-color: var(--color-03);
 }
 .image{
     width: 100%;
+    display: flex;
+    justify-content: center;
 }
 #img-container{
     display: flex;
@@ -185,23 +199,8 @@ main{
 #img-container img{
     width: 100%;
 }
-#primary-content{
-    background-color: var(--color-03);
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    box-shadow: 5px 5px #0000003d;
-}
-#footer{
-    background-color: var(--color-04);
-    font-family: var(--main-font);
-    color: var(--font-color);
-    text-align: center;
-}
-#footer-link{
-    color: var(--font-color);
-    font-weight: bold;
-    text-decoration: none;
+#video{
+    width: 100%;
 }
 #main-title{
     font-family: var(--font-04);
@@ -212,6 +211,8 @@ main{
     font-family: var(--font-04);
     color: var(--color-02);
     background: var(--gradient);
+    border-radius: 8px;
+    box-shadow: 1px 1px 5px 1px #9e2a2e57;
 }
 .text{
     font-weight: bold;
@@ -227,10 +228,9 @@ main{
     background-color: var(--color-04);
 }
 #list-container{
+    margin-top: 8px;
     width: 100%;
     overflow: hidden;
-}
-#list-container{
     font-weight: 600;
     background-color: var(--background-color);
     border-radius: 15px;
@@ -246,4 +246,31 @@ main{
 }
 #list-text{
     font-weight: 900;
+}
+#next-page{
+    border: none;
+    padding: 5px;
+    margin: 10px 8px 5px 0px;
+    border-radius: 5px;
+}
+.next-page-text{
+    margin-left: 10px;
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+}
+#botao-avancar{
+    float: right;
+}
+#footer{
+    margin-top: 20px;
+    background-color: var(--color-04);
+    font-family: var(--main-font);
+    color: var(--font-color);
+    text-align: center;
+}
+#footer-link{
+    color: var(--font-color);
+    font-weight: bold;
+    text-decoration: none;
 }
