--- a/principal/style.css
+++ b/principal/style.css
@@ -199,8 +199,18 @@ main{
 #img-container img{
     width: 100%;
 }
-#video{
+#video-container{
+    background-color: var(--color-04);
+    position: relative;
     width: 100%;
+    padding-top: 56.25%;
+}
+#video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 #main-title{
     font-family: var(--font-04);
